        xstarter change log

        0.8.0

        * Add -e option: execute an application and detach it from terminal
        * Print a list of applications from cache (-P param)
        * Fix bug that breaks the application if it's built without compiler optimisation
        * Save last open app when open with -e option
        * Remove some compiler warnings

        0.7.0
        26/03/2018
        * Add ability to provide arguments to applications

        0.6.0
        14/01/2018
        * Add ability to open an application in terminal
        * When calling chdir, change to user's home directory
        * Remove compiler warnings
        * Update deb package
        * Add rpm package

        0.5.2
        27/05/2017
        * Change name of internal function which conflicted with the builtin function.
        Required to build xstarter on arch.

        0.5.1
        26/05/2017

        * Fix a bug that appeared on Arch that caused problems with "open_itself" function.
        * When attempting to find a path to the xstarter, try to find it in $PATH which
        should work as long as xstarter is installed.
        * Add missing -r option to the help screen and readme file.
        * Add man page: man xstarter