@@ -4,6 +4,7 @@
 
         * Add -e option: execute an application and detach it from terminal
         * Print a list of applications from cache (-P param)
+        * Include recently open apps in the printed list
         * Fix bug that breaks the application if it's built without compiler optimisation
         * Save last open app when open with -e option
         * Remove some compiler warnings
